	(byte-compile-insert-header, byte-compile-output-docform)
	(byte-compile-file-form-defmumble, byte-compile-byte-code-maker)
	(byte-compile-lambda, byte-compile-form, byte-defop-compiler19)
	(byte-compile-list, byte-compile-concat, byte-compile-function-form)
	(byte-compile-insert, byte-compile-defun):
	Remove support for byte-compile-compatibility and Emacs 18.  (Bug#4571)

2009-11-04  Juri Linkov  <juri@jurta.org>

	* menu-bar.el (menu-bar-make-mm-toggle): Quote each element of `props'.
	(menu-bar-options-menu): Don't quote the `prop' arg of
	`menu-bar-make-mm-toggle'.

2009-11-04  Juanma Barranquero  <lekktu@gmail.com>

	* calendar/calendar.el (cal-loaddefs):
	* calendar/diary-lib.el (diary-loaddefs):
	* calendar/holidays.el (hol-loaddefs):
	* eshell/esh-module.el (esh-groups): Load rather than require.

2009-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/todo-mode.el (todo-add-category): Don't hardcode point-min==1.
	(todo-top-priorities): Only display-buffer when called interactively.
	(todo-item-start): Don't save excursion point.
	(todo-item-end): Be slightly more careful.  Add `include-sep' arg.
	(todo-insert-item-here, todo-file-item, todo-remove-item):
	Adjust uses of todo-item-start and todo-item-end.

	* emacs-lisp/autoload.el (generated-autoload-feature): Remove.
	(autoload-rubric): Don't use any more.
	* cedet/semantic/fw.el (semantic/loaddefs):
	* cedet/srecode.el (srecode/loaddefs):
	* cedet/ede.el (ede/loaddefs): Load rather than require.
	* lisp/cedet/ede/cpp-root.el:
	* lisp/cedet/ede/emacs.el:
	* lisp/cedet/ede/files.el:
	* lisp/cedet/ede/linux.el:
	* lisp/cedet/ede/locate.el:
	* lisp/cedet/ede/make.el:
	* lisp/cedet/ede/shell.el:
	* lisp/cedet/ede/speedbar.el:
	* lisp/cedet/ede/system.el:
	* lisp/cedet/ede/util.el:
	* lisp/cedet/semantic/analyze.el:
	* lisp/cedet/semantic/bovine.el:
	* lisp/cedet/semantic/complete.el:
	* lisp/cedet/semantic/ctxt.el:
	* lisp/cedet/semantic/db-file.el:
	* lisp/cedet/semantic/db-find.el: