@@ -3074,19 +3074,6 @@ If it is nil, then the handler is \"byte-compile-SYMBOL.\""
 		      ''byte-opcode-invert (list 'quote function)))
 	fnform))))
 
-(defmacro byte-defop-compiler19 (function &optional compile-handler)
-  ;; Just like byte-defop-compiler, but used to define an opcode to only
-  ;; be used when byte-compile-compatibility was false.
-  (list 'progn
-	(list 'put
-	      (list 'quote
-		    (or (car (cdr-safe function))
-			(intern (concat "byte-"
-					(symbol-name (or (car-safe function)
-							 function))))))
-	      ''emacs19-opcode t)
-	(list 'byte-defop-compiler function compile-handler)))
-
 (defmacro byte-defop-compiler-1 (function &optional compile-handler)
   (list 'byte-defop-compiler (list function nil) compile-handler))
 
@@ -3117,10 +3104,10 @@ If it is nil, then the handler is \"byte-compile-SYMBOL.\""
 (byte-defop-compiler current-buffer	0)
 ;;(byte-defop-compiler read-char	0) ;; obsolete
 (byte-defop-compiler interactive-p	0)
-(byte-defop-compiler19 widen		0)
-(byte-defop-compiler19 end-of-line    0-1)
-(byte-defop-compiler19 forward-char   0-1)
-(byte-defop-compiler19 forward-line   0-1)
+(byte-defop-compiler widen		0)
+(byte-defop-compiler end-of-line    0-1)
+(byte-defop-compiler forward-char   0-1)
+(byte-defop-compiler forward-line   0-1)
 (byte-defop-compiler symbolp		1)
 (byte-defop-compiler consp		1)
 (byte-defop-compiler stringp		1)
@@ -3138,15 +3125,15 @@ If it is nil, then the handler is \"byte-compile-SYMBOL.\""
 (byte-defop-compiler char-after		0-1)
 (byte-defop-compiler set-buffer		1)
 ;;(byte-defop-compiler set-mark		1) ;; obsolete
-(byte-defop-compiler19 forward-word	0-1)
-(byte-defop-compiler19 char-syntax	1)
-(byte-defop-compiler19 nreverse		1)
-(byte-defop-compiler19 car-safe		1)
-(byte-defop-compiler19 cdr-safe		1)
-(byte-defop-compiler19 numberp		1)
-(byte-defop-compiler19 integerp		1)
-(byte-defop-compiler19 skip-chars-forward     1-2)
-(byte-defop-compiler19 skip-chars-backward    1-2)
+(byte-defop-compiler forward-word	0-1)
+(byte-defop-compiler char-syntax	1)
+(byte-defop-compiler nreverse		1)
+(byte-defop-compiler car-safe		1)
+(byte-defop-compiler cdr-safe		1)
+(byte-defop-compiler numberp		1)
+(byte-defop-compiler integerp		1)
+(byte-defop-compiler skip-chars-forward     1-2)
+(byte-defop-compiler skip-chars-backward    1-2)
 (byte-defop-compiler eq 	 	2)
 (byte-defop-compiler memq		2)
 (byte-defop-compiler cons		2)
@@ -3160,37 +3147,37 @@ If it is nil, then the handler is \"byte-compile-SYMBOL.\""
 (byte-defop-compiler get		2)
 (byte-defop-compiler nth		2)
 (byte-defop-compiler substring		2-3)
-(byte-defop-compiler19 (move-marker byte-set-marker) 2-3)
-(byte-defop-compiler19 set-marker	2-3)
-(byte-defop-compiler19 match-beginning	1)
-(byte-defop-compiler19 match-end	1)
-(byte-defop-compiler19 upcase		1)
-(byte-defop-compiler19 downcase		1)
-(byte-defop-compiler19 string=		2)
-(byte-defop-compiler19 string<		2)
-(byte-defop-compiler19 (string-equal byte-string=) 2)
-(byte-defop-compiler19 (string-lessp byte-string<) 2)
-(byte-defop-compiler19 equal		2)
-(byte-defop-compiler19 nthcdr		2)
-(byte-defop-compiler19 elt		2)
-(byte-defop-compiler19 member		2)
-(byte-defop-compiler19 assq		2)
-(byte-defop-compiler19 (rplaca byte-setcar) 2)
-(byte-defop-compiler19 (rplacd byte-setcdr) 2)
-(byte-defop-compiler19 setcar		2)
-(byte-defop-compiler19 setcdr		2)
-(byte-defop-compiler19 buffer-substring	2)
-(byte-defop-compiler19 delete-region	2)
-(byte-defop-compiler19 narrow-to-region	2)
-(byte-defop-compiler19 (% byte-rem)	2)
+(byte-defop-compiler (move-marker byte-set-marker) 2-3)
+(byte-defop-compiler set-marker	2-3)
+(byte-defop-compiler match-beginning	1)
+(byte-defop-compiler match-end	1)
+(byte-defop-compiler upcase		1)
+(byte-defop-compiler downcase		1)
+(byte-defop-compiler string=		2)
+(byte-defop-compiler string<		2)
+(byte-defop-compiler (string-equal byte-string=) 2)
+(byte-defop-compiler (string-lessp byte-string<) 2)
+(byte-defop-compiler equal		2)
+(byte-defop-compiler nthcdr		2)
+(byte-defop-compiler elt		2)
+(byte-defop-compiler member		2)
+(byte-defop-compiler assq		2)
+(byte-defop-compiler (rplaca byte-setcar) 2)
+(byte-defop-compiler (rplacd byte-setcdr) 2)
+(byte-defop-compiler setcar		2)
+(byte-defop-compiler setcdr		2)
+(byte-defop-compiler buffer-substring	2)
+(byte-defop-compiler delete-region	2)
+(byte-defop-compiler narrow-to-region	2)
+(byte-defop-compiler (% byte-rem)	2)
 (byte-defop-compiler aset		3)
 
 (byte-defop-compiler max		byte-compile-associative)
 (byte-defop-compiler min		byte-compile-associative)
 (byte-defop-compiler (+ byte-plus)	byte-compile-associative)
-(byte-defop-compiler19 (* byte-mult)	byte-compile-associative)
+(byte-defop-compiler (* byte-mult)	byte-compile-associative)
 
-;;####(byte-defop-compiler19 move-to-column	1)
+;;####(byte-defop-compiler move-to-column	1)
 (byte-defop-compiler-1 interactive byte-compile-noop)
 
 
@@ -3292,8 +3279,8 @@ If it is nil, then the handler is \"byte-compile-SYMBOL.\""
 (byte-defop-compiler insert)
 (byte-defop-compiler-1 function byte-compile-function-form)
 (byte-defop-compiler-1 - byte-compile-minus)
-(byte-defop-compiler19 (/ byte-quo) byte-compile-quo)
-(byte-defop-compiler19 nconc)
+(byte-defop-compiler (/ byte-quo) byte-compile-quo)
+(byte-defop-compiler nconc)
 
 (defun byte-compile-char-before (form)
   (cond ((= 2 (length form))
